# containers

./: README.md  elasticsearch.yaml  redis.sh  redis.yaml  solr.yaml
dockerfiles/solr/: Dockerfile
redis/: redis.conf
redlock/: index.js  package-lock.json  package.json
solrcloud/: README.md  pyproject.toml
solrcloud/data/: sample.jsonl
solrcloud/server/solr/: solr.xml
solrcloud/server/solr/configsets/poc/: schema.xml  solrconfig.xml
solrcloud/src/: check.py  gen.py
