[project]
name = "solrcloud"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taisuke Miyazaki", email = "imishinist@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[tool.rye]
managed = true
