[project]
name = "solrcloud"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taisuke Miyazaki", email = "imishinist@gmail.com" }
]
dependencies = [
    "fire>=0.7.0",
    "numpy>=2.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[tool.rye]
managed = true
